# basic_rag

./: .gitignore  pyproject.toml
script/: run.sh
src/: build_vec_index.py  dialogue_manager.py  llm_model.py  searcher.py  simcse_model.py  vec_model.py  vec_searcher.py
src/api/: client.py  handler.py  main_service_online.py
