[project]
name = "basic_rag"
version = "0.0.1"


[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
# pythonpath = [ "." ]
asyncio_mode = "auto"


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
#warn_unused_ignores = true
#strict = true
exclude = ["benchmark/", "docs/", "examples/", "scripts/", "tests/", "build/"]
